--- a/content/contenthome.html
+++ b/content/contenthome.html
@@ -287,7 +287,7 @@
         contentAccessoriesProduct +
         `<li class="accessories_right_all_list">
                             <a class="accessories_right_all_in"
-                                href="../product.html?` +
+                                href="./product.html?` +
         item.id +
         `">
                                 <div class="accessories_right_all_img">
@@ -348,7 +348,7 @@
         contentAccessoriesLaptopProduct +
         `<li class="accessories_right_all_list">
                         <a class="accessories_right_all_in"
-                                href="../product.html?` +
+                                href="./product.html?` +
         item.id +
         `">
                             <div class="accessories_right_all_img">
@@ -410,7 +410,7 @@
         contentAccessoriesEquipmentProduct +
         `<li class="accessories_right_all_list">
                         <a class="accessories_right_all_in"
-                                href="../product.html?` +
+                                href="./product.html?` +
         item.id +
         `">
                             <div class="accessories_right_all_img">
@@ -472,7 +472,7 @@
         contentAccessoriesHousewaresProduct +
         `<li class="accessories_right_all_list">
                         <a class="accessories_right_all_in"
-                                href="../product.html?` +
+                                href="./product.html?` +
         item.id +
         `">
                             <div class="accessories_right_all_img">
@@ -535,7 +535,7 @@
         contentAccessoriesStrangeProduct +
         `<li class="accessories_right_all_list">
                     <a class="accessories_right_all_in"
-                                href="../product.html?` +
+                                href="./product.html?` +
         item.id +
         `">
                         <div class="accessories_right_all_img">
