--- a/content/contentproduct.html
+++ b/content/contentproduct.html
@@ -1,4 +1,4 @@
-<div class="header_product">
+<!-- <div class="header_product">
     <div class="header_product_homepage_link">
         <a class="header_product_homepage" href="https://www.dealtichtac.com">Trang chủ</a> >
         <a class="header_product_homepage"
@@ -6,30 +6,27 @@
             liệu</a> >
         <span class="header_product_">Sạc nokia chuôi nhỏ</span>
     </div>
-</div>
+</div> -->
 <div class="header_product_content">
     <ul class="header_product_content_left">
         <li class="header_product_content_left_img">
-            <a class="header_product_content_left_link"
+            <a class="header_product_content_left_link" 
                 href="https://www.dealtichtac.com/1078-ba-lo-cong-so-dtt022.htm">
                 <img class="header_product_content_left_img_link"
                     src="https://www.dealtichtac.com/product/Ba lô Hara shop HR200.jpg" alt="">
             </a>
         </li>
     </ul>
-    <div class="header_product_content_content">
-        <img class="header_product_content_content_img"
-            src="https://www.dealtichtac.com/product/Ba lô Hara shop HR200.jpg" alt="">
+    <div class="header_product_content_content" id="header_product_content_content_img_id">
+       
     </div>
     <div class="header_product_content_right">
         <div class="header_product_content_right_content">
-            <span class="header_product_content_right_introduce">
-                Ba lô công sở DTT022
+            <span class="header_product_content_right_introduce" id ="header_product_content_right_introduce_id">
             </span><br>
             <p class="header_product_content_right_price" style="font-weight: 700;">
                 Giá bán:
-                <span class="header_product_content_right_price_number">
-                    195.000₫
+                <span class="header_product_content_right_price_number" id="header_product_content_right_price_number_id">
                 </span>
             </p>
             <p class="header_product_content_right_insurance">
