--- a/content/contentproduct.html
+++ b/content/contentproduct.html
@@ -10,7 +10,7 @@
 <div class="header_product_content">
     <ul class="header_product_content_left">
         <li class="header_product_content_left_img">
-            <a class="header_product_content_left_link" 
+            <a class="header_product_content_left_link"
                 href="https://www.dealtichtac.com/1078-ba-lo-cong-so-dtt022.htm">
                 <img class="header_product_content_left_img_link"
                     src="https://www.dealtichtac.com/product/Ba lô Hara shop HR200.jpg" alt="">
@@ -18,15 +18,16 @@
         </li>
     </ul>
     <div class="header_product_content_content" id="header_product_content_content_img_id">
-       
+
     </div>
     <div class="header_product_content_right">
         <div class="header_product_content_right_content">
-            <span class="header_product_content_right_introduce" id ="header_product_content_right_introduce_id">
+            <span class="header_product_content_right_introduce" id="header_product_content_right_introduce_id">
             </span><br>
             <p class="header_product_content_right_price" style="font-weight: 700;">
                 Giá bán:
-                <span class="header_product_content_right_price_number" id="header_product_content_right_price_number_id">
+                <span class="header_product_content_right_price_number"
+                    id="header_product_content_right_price_number_id">
                 </span>
             </p>
             <p class="header_product_content_right_insurance">
@@ -40,8 +41,8 @@
             <div class="header_product_content_right_strikethrough"></div>
             <span class="header_product_content_right_delivery">Giao hàng tận nơi trên toàn quốc!</span>
             <div class="header_product_content_right_cart">
-                <a class="header_product_content_right_cart_link"
-                    href="https://www.dealtichtac.com/cart1179">THÊM VÀO GIỎ HÀNG</a>
+                <a class="header_product_content_right_cart_link" href="https://www.dealtichtac.com/cart1179">THÊM VÀO
+                    GIỎ HÀNG</a>
             </div>
             <span class="header_product_content_right_contact">
                 Gọi đặt mua:
@@ -51,68 +52,93 @@
         </div>
     </div>
 </div>
+
+
 <div class="header_product_introduce">
     <div class="header_product_introduce_list">
-        <ul class="header_product_introduce_list_item">
-            <li class="header_product_introduce_list_title header_product_introduce_list_title_true">
-                GIỚI THIỆU SẢN PHẨM
-            </li>
-            <li class="header_product_introduce_list_title">
-                THÔNG SỐ KĨ THUẬT
-            </li>
-            <li class="header_product_introduce_list_title">
-                BẢO HÀNH
-            </li>
-            <li class="header_product_introduce_list_title">
-                BÌNH LUẬN
-            </li>
-        </ul>
-    </div>
-    <div class="header_product_introduce_content">
-        <div class="header_product_introduce_content_introduce">
-            <p></p>
-        </div>
-        <div class="header_product_introduce_content_parameter">
-            <p class="header_product_introduce_content_parameter_content">
-                Chất liệu vải bền chắc, ít bám bụi</br>
-                Đường may tỉ mỉ, chắc chắn</br>
-                Thiết kế balo có nhiều ngăn tiện lợi</br>
-                Màu xám hài hòa, trẻ trung</br>
-                Dây đeo và tay xách được may vững chắc
-            </p>
-        </div>
-        <div class="header_product_introduce_content_insurance">
-            <p class="header_product_introduce_content_insurance_content">
-                Xin quý khách vệ sinh sản phẩm và mang theo những phụ kiện có liên quan khi đến bảo
-                hành.</br>
-                    Thời gian nhận bảo hành:<strong class="header_product_introduce_content_insurance_title">
-                    09h đến 18h</strong>  
-                từ thứ 2 đến 7 (Chủ nhật và các ngày lễ nghỉ).
-            </p>
-        </div>
-        <div class="header_product_introduce_content_comment">
-            <div class="header_product_introduce_content_comment_header">
-                <span class="header_product_introduce_content_comment_header_left">
-                    0 bình luận
-                </span>
-                <span class="header_product_introduce_content_comment_header_right">
-                    Sắp xếp theo 
-                    <a class="header_product_introduce_content_comment_header_right_button" 
-                    href="">Mới nhất
-                    <i class="fa-solid fa-up-down"></i>
-                </a>
-                </span>
+        <div class="header_product_introduce_list_item">
+            <div class="tab">
+                <button class="tablinks" onclick="openCity(event, 'vietnam')">GIỚI THIỆU SẢN PHẨM</button>
+                <button class="tablinks" onclick="openCity(event, 'London')">THÔNG SỐ KĨ THUẬT</button>
+                <button class="tablinks" onclick="openCity(event, 'Paris')">BẢO HÀNH</button>
+                <button class="tablinks" onclick="openCity(event, 'Tokyo')">BÌNH LUẬN</button>
             </div>
-            <div class="header_product_introduce_content_comment_header_strikethrough"></div>
-            <div>
-                <input class="header_product_introduce_content_comment_header_input" type="text" placeholder="Thêm bình luận...">
-            </div>
-            <div class="header_product_introduce_content_comment_header_strikethrough"></div>
-            <div>
-                <i class="fa-brands fa-facebook-square 
-                header_product_introduce_content_comment_header_icon_facebook"></i>
-                <a href="">Plugin bình luận trên Facebook</a>
-            </div>
+
         </div>
     </div>
 </div>
+
+<div id="London" class="tabcontent">
+    <p class="header_product_introduce_content_parameter_content">
+        Chất liệu vải bền chắc, ít bám bụi</br>
+        Đường may tỉ mỉ, chắc chắn</br>
+        Thiết kế balo có nhiều ngăn tiện lợi</br>
+        Màu xám hài hòa, trẻ trung</br>
+        Dây đeo và tay xách được may vững chắc
+    </p>
+</div>
+
+<div id="Paris" class="tabcontent">
+    <p class="header_product_introduce_content_insurance_content">
+        Xin quý khách vệ sinh sản phẩm và mang theo những phụ kiện có liên quan khi đến bảo
+        hành.</br>
+        Thời gian nhận bảo hành:<strong class="header_product_introduce_content_insurance_title">
+            09h đến 18h</strong>
+        từ thứ 2 đến 7 (Chủ nhật và các ngày lễ nghỉ).
+    </p>
+</div>
+
+<div id="vietnam" class="tabcontent">
+    <div class="header_product_introduce_content_introduce">
+        <p></p>
+    </div>
+</div>
+
+<div id="Tokyo" class="tabcontent">
+    <div class="header_product_introduce_content_comment_header">
+        <span class="header_product_introduce_content_comment_header_left">
+            0 bình luận
+        </span>
+        <span class="header_product_introduce_content_comment_header_right">
+            Sắp xếp theo
+            <a class="header_product_introduce_content_comment_header_right_button" href="">Mới nhất
+                <i class="fa-solid fa-up-down"></i>
+            </a>
+        </span>
+    </div>
+    <div class="header_product_introduce_content_comment_header_strikethrough"></div>
+    <div>
+        <input class="header_product_introduce_content_comment_header_input" type="text"
+            placeholder="Thêm bình luận...">
+    </div>
+    <div class="header_product_introduce_content_comment_header_strikethrough"></div>
+    <div>
+        <i class="fa-brands fa-facebook-square 
+          header_product_introduce_content_comment_header_icon_facebook"></i>
+        <a href="">Plugin bình luận trên Facebook</a>
+    </div>
+</div>
+
+
+
+<div class="header_product_introduce">
+    <div class="header_product_introduce_list">
+    </div>
+
+</div>
+</div>
+<script>
+    function openCity(evt, cityName) {
+        var i, tabcontent, tablinks;
+        tabcontent = document.getElementsByClassName("tabcontent");
+        for (i = 0; i < tabcontent.length; i++) {
+            tabcontent[i].style.display = "none";
+        }
+        tablinks = document.getElementsByClassName("tablinks");
+        for (i = 0; i < tablinks.length; i++) {
+            tablinks[i].className = tablinks[i].className.replace(" active", "");
+        }
+        document.getElementById(cityName).style.display = "block";
+        evt.currentTarget.className += " active";
+    }
+</script>
